# Bayora

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.audit  Dockerfile.blue-agent  Dockerfile.llm-sandbox  Dockerfile.orchestrator  Dockerfile.red-agent  ISSUES.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/provenance-tracker/: design.md  requirements.md  tasks.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-RESEARCH.md  01-foundation-01-PLAN.md  01-foundation-01-SUMMARY.md  01-foundation-02-PLAN.md  01-foundation-02-SUMMARY.md
.planning/phases/02-red-teaming-engine/: 02-CONTEXT.md  02-RESEARCH.md  02-red-teaming-engine-01-PLAN.md  02-red-teaming-engine-01-SUMMARY.md  02-red-teaming-engine-02-PLAN.md  02-red-teaming-engine-02-SUMMARY.md  02-red-teaming-engine-03-PLAN.md
.planning/phases/03-evaluation-engine/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-container-integration-certificates/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-04-VERIFICATION.md  04-container-integration-certificates-RESEARCH.md
.planning/phases/05-project-setup-and-core-infrastructure/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-RESEARCH.md  05-UAT.md
.planning/phases/06-dataset-management/: 06-SUMMARY.md
.planning/phases/07-configuration-parser-and-validator/: 07-01-PLAN.md  07-RESEARCH.md  07-SUMMARY.md
.planning/phases/08-secrets-manager/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md  08-04-PLAN.md  08-RESEARCH.md
.planning/phases/09-audit-log-service/: 09-audit-log-service-01-PLAN.md  09-audit-log-service-01-SUMMARY.md  09-audit-log-service-02-PLAN.md  09-audit-log-service-02-SUMMARY.md  09-audit-log-service-03-PLAN.md  09-audit-log-service-03-SUMMARY.md
.planning/phases/10-provenance-tracker/: 10-01-PLAN.md
.planning/phases/11-checkpoint-core-services/: 11-01-PLAN.md
.planning/phases/12-anomaly-detector/: 12-01-PLAN.md
.planning/phases/13-network-segmentation/: 13-01-PLAN.md
.planning/phases/13.1-resource-governor/: 13.1-01-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
configs/gVisor/: README.md  runsc.conf
configs/seccomp/: audit.json  blue-agent.json  llm-sandbox.json  orchestrator.json  red-agent.json
frontend/: .gitignore  README.md  package-lock.json
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: Footer.tsx  Preloader.tsx  Shell.tsx
frontend/src/routes/: __root.tsx  audit.tsx  config.tsx  index.tsx  live.tsx  login.tsx  profile.tsx  register.tsx  results.tsx
services/audit/: pyproject.toml  verify_audit.py
services/audit/src/audit/: __init__.py  api.py  auth.py  chain.py  main.py  models.py  storage.py  verify.py  writer.py
services/audit/tests/: test_api.py  test_audit.py  test_auth.py  test_chain.py  test_storage.py  test_verify.py  test_writer.py
services/blue-agent/: pyproject.toml
services/blue-agent/scripts/: train_hh_rlhf.py  train_toxigen.py
services/blue-agent/src/blue_agent/: __init__.py  isolation.py  main.py
services/blue-agent/src/blue_agent/classifiers/: __init__.py  base.py  ensemble.py  hh_rlhf_classifier.py  toxigen_classifier.py
services/blue-agent/src/blue_agent/evaluation/: __init__.py  runner.py  statistics.py
services/blue-agent/src/blue_agent/metrics/: __init__.py  base.py  registry.py
services/blue-agent/src/blue_agent/metrics/categories/: __init__.py  bias.py  harmfulness.py  injection.py  privacy.py  quality.py  toxicity.py
services/blue-agent/tests/: test_blue_agent.py  test_classifiers.py  test_evaluation.py  test_isolation.py  test_metrics.py
services/llm-sandbox/: pyproject.toml
services/llm-sandbox/src/llm_sandbox/: __init__.py  main.py
services/llm-sandbox/tests/: test_llm_sandbox.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  audit_client.py  certificate.py  main.py  verify_cert.py
services/orchestrator/tests/: test_certificate.py  test_orchestrator.py
services/red-agent/: pyproject.toml
services/red-agent/src/red_agent/: __init__.py  main.py
services/red-agent/tests/: test_red_agent.py
tests/: conftest.py
tests/config/: test_policy.py
tests/datasets/: test_datasets.py
