[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit"
version = "0.1.0"
description = "Audit service — tamper-evident cryptographic logging and certificate generation"
requires-python = ">=3.12"
dependencies = [
    "centinela-core",
    "cryptography>=41.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audit"]
