[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit"
version = "0.1.0"
description = "Audit service — tamper-evident cryptographic logging and certificate generation"
requires-python = ">=3.12"
dependencies = [
    "centinela-core",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/audit"]
