[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
description = "Orchestrator service — session lifecycle, provider routing, and container coordination"
requires-python = ">=3.12"
dependencies = [
    "centinela-core",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
