[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestrator"
version = "0.1.0"
description = "Orchestrator service — session lifecycle, provider routing, and container coordination"
requires-python = ">=3.12"
dependencies = [
    "centinela-core",
    "reportlab>=4.5.1",
    "cryptography>=41.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
