[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "red-agent"
version = "0.1.0"
description = "Red agent service — adversarial prompt generation and attack execution"
requires-python = ">=3.12"
dependencies = [
    "centinela-core",
]

[tool.hatch.build.targets.wheel]
packages = ["src/red_agent"]
